--- a/OmegaProject/src/App.config
+++ b/OmegaProject/src/App.config
@@ -6,7 +6,6 @@
 		<add name="schoolConnection" connectionString="Server=;Database=app_database;Uid=PCXXX;Pwd=student;" providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
 	<appSettings>
-		<!-- Specify the path for the log file -->
-		<add key="LogFilePath" value="log.txt"/>
+		<add key="logFilePath" value="../../../errorLogs/log.txt" />
 	</appSettings>
 </configuration>
